# alpha-game-snake

./: .gitignore  AGENTS.md  Cargo.toml  check_errors_python.py  hardware_info.json  ref.txt  restart.sh  snake_ppo.pt  snake_rl_parallel.py  test.txt
configs/runtime/: hardware.auto.toml
configs/train/: alpha_zero_vit.yaml  vit_mae_icm_ppo.yaml
crates/snake-core/: Cargo.toml
crates/snake-core/src/: batch.rs  env.rs  lib.rs  python_api.rs  types.rs
crates/snake-core/tests/: batch_consistency.rs  rules.rs
crates/snake-ui/: Cargo.toml
crates/snake-ui/src/: main.rs
crates/snake-ui/src/bridge/: metrics_client.rs  mod.rs
crates/snake-ui/src/panels/: env_grid.rs  focus_agent.rs  metrics.rs  mod.rs
docs/: design_snake_alphazero.md  plan_mcts.md
docs/architecture/: repo-metadata.db  repo-metadata.json  repository-structure.md  vit-rl-system-principles.md  vit-rl-zero-snake-modules.md
docs/system_profile/: 2026-02-09-hardware-baseline.md
modules/snake_alphazero/: Cargo.toml  requirements.txt  run_training.sh
modules/snake_alphazero/data/self_play/: game_00000.json  game_00001.json  game_00002.json  game_00003.json  game_00004.json  game_00005.json  game_00006.json  game_00007.json  game_00008.json  game_00009.json  game_00010.json  game_00011.json  game_00012.json  game_00013.json  game_00014.json  game_00015.json  game_00016.json  game_00017.json  game_00018.json  game_00019.json  game_00020.json  game_00021.json  game_00022.json  game_00023.json  game_00024.json  game_00025.json  game_00026.json  game_00027.json  game_00028.json  game_00029.json  game_00030.json  game_00031.json  game_00032.json  game_00033.json  game_00034.json  game_00035.json  game_00036.json  game_00037.json  game_00038.json  game_00039.json  (+160 more)
modules/snake_alphazero/models/: latest_model.onnx  latest_model.onnx.data
modules/snake_alphazero/src/: inference.rs  lib.rs  main.rs  mcts.rs  self_play.rs
modules/snake_alphazero/trainer/: dataset.py  init_model.py  network.py  train.py
scripts/: check_errors.sh
(+109 files in other folders)
