[workspace]
members = ["crates/snake-core", "crates/snake-ui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["alpha-game-snake"]

[workspace.dependencies]
anyhow = "1.0"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }
eframe = "0.30"
egui = "0.30"
egui_plot = "0.30"
serde_json = "1.0"
