[package]
name = "snake-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "snake-ui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
eframe.workspace = true
egui.workspace = true
egui_plot.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
snake-core = { path = "../snake-core" }
