[package]
name = "snake_alphazero"
version = "0.1.0"
edition = "2021"

[dependencies]
snake_engine = { path = "../snake_engine" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
log = "0.4"
ort = { version = "2.0.0-rc.9", default-features = false, features = ["load-dynamic"] } # ONNX Runtime
ndarray = "0.17" # For tensor manipulation
pyo3 = { version = "0.23.3", features = ["extension-module"] }

[lib]
name = "snake_alphazero"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "self_play"
path = "src/main.rs"
